[package]
name = "luma"
version = "0.1.3"
edition = "2021"
description = "GPU driven linear algebra/math library."
license = "MIT OR Apache-2.0"

[dependencies]
wgpu = "22.0.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
bytemuck = "1.16.1"
flume = "0.11.0"
log = "0.4.22"
once_cell = "1.19.0"