[package]
name = "luma"
version = "0.1.3"
edition = "2021"
description = "GPU driven linear algebra/math library."
license = "MIT OR Apache-2.0"

[dependencies.uuid]
version = "1.12.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies]
wgpu = "24.0.0"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
bytemuck = "1.21.0"
flume = "0.11.1"
log = "0.4.25"
once_cell = "1.20.2"
